Small Updates removed ul ll

--- a/USAF_CMP_G3X_AVI_TSN_v4.ipynb
+++ b/USAF_CMP_G3X_AVI_TSN_v4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%reset -f"
+    "# %reset -f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1st Qtr 2019 Data',\n",
+       " '2018 Monthly Data',\n",
+       " '2019 Monthly Data',\n",
+       " '2nd Qtr 2019 Data',\n",
+       " 'BC QUICK LOOK',\n",
+       " 'Cal G3X Master',\n",
+       " 'G3X Master']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# res = len(x1.sheet_names)\n",
     "sheetList = x1.sheet_names\n",
@@ -46,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +75,23 @@
     "df_tierMap_nonTSN = pd.read_csv(filename3, sep = '\\t')\n",
     "df_tierMap_nonTSN.columns = df_tierMap_nonTSN.columns.str.replace(' ', '_')\n",
     "\n",
-    "df.shape"
+    "# df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 exist\n",
+      "Q2 exist\n"
+     ]
+    }
+   ],
    "source": [
     "for sheet in sheetList:\n",
     "    if '1st' in sheet and 'Qtr' in sheet:\n",
@@ -113,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +239,9 @@
     "                tierUP = estTier + 1\n",
     "            else:\n",
     "                tierUP = 2\n",
-    "                \n",
+    "    \n",
+    "\n",
+    "            \n",
     "        # floor to underestimate estimated tires\n",
     "        avi_est_tires_rebate = estimatedTires * df_tierMap.iloc[estTier,1]\n",
     "        avi_1up_tires = df_tierMap.iloc[tierUP,2]\n",
@@ -225,7 +253,9 @@
     "\n",
     "        range_dollars_ll = ((avi_1up_tires*df_tierMap.iloc[0,1]))#.values\n",
     "        range_dollars_ul = ((avi_1up_tires*df_tierMap.iloc[tierUP,1]))#.values\n",
-    "        \n",
+    "   \n",
+    "\n",
+    "     \n",
     "###########################################################################################################################        \n",
     "#         print(singleCusty_select)\n",
     "# ###########################################################################################################################     \n",
@@ -249,17 +279,16 @@
     "            {'estimated_tier':estTier,\n",
     "             'current_est_tires':estimatedTires, 'total_est_rebate':avi_est_tires_rebate,\n",
     "             'Up_tier':tierUP,\n",
-    "             'avi_up_tires':avi_1up_tires*numLocations, 'avi_up_rebate':avi_1up_tires_rebate*numLocations,\n",
-    "             'range_lower':range_dollars_ll, 'range_upper':range_dollars_ul*numLocations,'grain': 'Annual'})\n",
+    "             'avi_up_tires':avi_1up_tires*numLocations, \n",
+    "             'avi_up_rebate':avi_1up_tires_rebate*numLocations,'grain': 'Annual'})\n",
     "        calculatedData = calculatedData.append(tempData)\n",
     "    else:\n",
     "#         print('\\nJUNK:', tt,'\\n', 'indexNumber:', ii)\n",
     "        tempData = pd.DataFrame(\n",
-    "            {'estimated_tier':0,\n",
-    "             'current_est_tires':0, 'total_est_rebate':0,\n",
-    "             'Up_tier':1,\n",
-    "             'avi_up_tires':0*numLocations, 'avi_up_rebate':0*numLocations,\n",
-    "             'range_lower':range_dollars_ll, 'range_upper':range_dollars_ul,'grain': 'Annual'})\n",
+    "            {'estimated_tier':[0],\n",
+    "             'current_est_tires':[0], 'total_est_rebate':[0],\n",
+    "             'Up_tier':[1],\n",
+    "             'avi_up_tires':[0], 'avi_up_rebate':[0], 'grain': ['Annual']})\n",
     "        calculatedData = calculatedData.append(tempData)\n",
     "#         print(ii)\n",
     "###########################################################################################################################        \n",
@@ -269,17 +298,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "finalData = finalData.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
-    "# finalData.head()"
+    "tt.tm_year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estimated_tier</th>\n",
+       "      <th>current_est_tires</th>\n",
+       "      <th>total_est_rebate</th>\n",
+       "      <th>Up_tier</th>\n",
+       "      <th>avi_up_tires</th>\n",
+       "      <th>avi_up_rebate</th>\n",
+       "      <th>grain</th>\n",
+       "      <th>Dealer_List</th>\n",
+       "      <th>G3X_Common_Owner</th>\n",
+       "      <th>Unnamed:_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Goodyear_Core_Net_Purchases_QTD</th>\n",
+       "      <th>Kelly_Net_Purchases_QTD</th>\n",
+       "      <th>Other_Net_Purchases_QTD</th>\n",
+       "      <th>Incentive_Payment</th>\n",
+       "      <th>AVI_Curr_Tier</th>\n",
+       "      <th>Net_Shipments_YTD</th>\n",
+       "      <th>Units_to_AVI_Nxt_Tier</th>\n",
+       "      <th>Goodyear_Core_Net_Purchases_YTD</th>\n",
+       "      <th>AVI_Payment</th>\n",
+       "      <th>Last_Transaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>414.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>YOUNGBLOOD AUTOMOTIVE &amp; TIRE_00A0000722</td>\n",
+       "      <td>00A0000722</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>201</td>\n",
+       "      <td>799</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-06-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>857.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>WITT BOYS INC_00A0005385</td>\n",
+       "      <td>00A0005385</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>107</td>\n",
+       "      <td>85</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1499</td>\n",
+       "      <td>0</td>\n",
+       "      <td>425</td>\n",
+       "      <td>575</td>\n",
+       "      <td>166</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1851.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>WILLEYS TIRE SHOP_00A0006972</td>\n",
+       "      <td>00A0006972</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>252</td>\n",
+       "      <td>145</td>\n",
+       "      <td>62</td>\n",
+       "      <td>3179</td>\n",
+       "      <td>0</td>\n",
+       "      <td>918</td>\n",
+       "      <td>1082</td>\n",
+       "      <td>424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1389.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>WRIGHT BROTHERS AUTO SERVICE_00A0008242</td>\n",
+       "      <td>00A0008242</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>224</td>\n",
+       "      <td>59</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>0</td>\n",
+       "      <td>674</td>\n",
+       "      <td>1326</td>\n",
+       "      <td>407</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-06-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>454.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>WITTHOFT CORP INC_00B0146291</td>\n",
+       "      <td>00B0146291</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30</td>\n",
+       "      <td>291</td>\n",
+       "      <td>0</td>\n",
+       "      <td>223</td>\n",
+       "      <td>777</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-06-28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   estimated_tier  current_est_tires  total_est_rebate  Up_tier  avi_up_tires  \\\n",
+       "0               0              414.0               0.0        1        1000.0   \n",
+       "1               0              857.0               0.0        1        1000.0   \n",
+       "2               0             1851.0               0.0        1        2000.0   \n",
+       "3               0             1389.0               0.0        1        2000.0   \n",
+       "4               0              454.0               0.0        1        1000.0   \n",
+       "\n",
+       "   avi_up_rebate   grain                              Dealer_List  \\\n",
+       "0         2000.0  Annual  YOUNGBLOOD AUTOMOTIVE & TIRE_00A0000722   \n",
+       "1         2000.0  Annual                 WITT BOYS INC_00A0005385   \n",
+       "2         4000.0  Annual             WILLEYS TIRE SHOP_00A0006972   \n",
+       "3         4000.0  Annual  WRIGHT BROTHERS AUTO SERVICE_00A0008242   \n",
+       "4         2000.0  Annual             WITTHOFT CORP INC_00B0146291   \n",
+       "\n",
+       "  G3X_Common_Owner  Unnamed:_2       ...         \\\n",
+       "0       00A0000722           1       ...          \n",
+       "1       00A0005385           1       ...          \n",
+       "2       00A0006972           1       ...          \n",
+       "3       00A0008242           1       ...          \n",
+       "4       00B0146291           1       ...          \n",
+       "\n",
+       "  Goodyear_Core_Net_Purchases_QTD Kelly_Net_Purchases_QTD  \\\n",
+       "0                              22                       0   \n",
+       "1                             107                      85   \n",
+       "2                             252                     145   \n",
+       "3                             224                      59   \n",
+       "4                              23                      10   \n",
+       "\n",
+       "  Other_Net_Purchases_QTD Incentive_Payment  AVI_Curr_Tier Net_Shipments_YTD  \\\n",
+       "0                       2                 0              0               201   \n",
+       "1                      37              1499              0               425   \n",
+       "2                      62              3179              0               918   \n",
+       "3                      47              1945              0               674   \n",
+       "4                      30               291              0               223   \n",
+       "\n",
+       "  Units_to_AVI_Nxt_Tier Goodyear_Core_Net_Purchases_YTD AVI_Payment  \\\n",
+       "0                   799                              21           0   \n",
+       "1                   575                             166           0   \n",
+       "2                  1082                             424           0   \n",
+       "3                  1326                             407           0   \n",
+       "4                   777                              42           0   \n",
+       "\n",
+       "  Last_Transaction  \n",
+       "0       2019-06-26  \n",
+       "1       2019-06-30  \n",
+       "2       2019-06-30  \n",
+       "3       2019-06-26  \n",
+       "4       2019-06-28  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finalData = finalData.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
+    "finalData.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
