Updated Tier Up Logic

--- a/USAF_CMP_BSFS_ASSOC_v5.ipynb
+++ b/USAF_CMP_BSFS_ASSOC_v5.ipynb
@@ -78,7 +78,7 @@
     "filename2 = '//usoil.local/Production/USV/Apps/PowerBI/US AutoForce/Sales Reports/CMP/Incentive Requirments/BSFS_ASSOC_Incentive.txt '\n",
     "df_tierMap = pd.read_csv(filename2, sep = '\\t')\n",
     "df_tierMap.columns = df_tierMap.columns.str.replace(' ', '_')\n",
-    "df_tierMap"
+    "# df_tierMap"
    ]
   },
   {
@@ -114,17 +114,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.columns.to_series(index=range(df.shape[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "calculatedData = pd.DataFrame([])\n",
     "for ii in range(df.shape[0]):\n",
+    "# for ii in range(102,103):    \n",
     "\n",
     "    singleCusty = df.iloc[[ii]]\n",
     "    singleCusty.reset_index(inplace=True)\n",
@@ -197,13 +189,13 @@
     "        \n",
     "        # floor to underestimate estimated tires\n",
     "        bridgeStone_est_tires = np.floor((singleCusty_select.iloc[:,2] / (numDays / daysINqtr)).values)\n",
-    "\n",
     "        bridgeStone_est_tires_rebate = bridgeStone_est_tires * df_tierMap.iloc[estTier,1]\n",
     "        bridgeStone_prop = singleCusty_select.iloc[:,2] /  singleCusty_select.iloc[:,1]\n",
     "        # ceil to make sure the customer surpasses the minimal 1up tire threshold\n",
     "        bridgeStone_1up_tires = np.ceil((bridgeStone_prop * df_tierMap.iloc[tierUP,4]).values)\n",
     "        bridgeStone_1up_tires_rebate = bridgeStone_1up_tires * df_tierMap.iloc[tierUP,1]\n",
     "   \n",
+    "\n",
     "        fireStone_est_tires = np.floor((singleCusty_select.iloc[:,3] / (numDays / daysINqtr)).values)\n",
     "        fireStone_est_tires_rebate = fireStone_est_tires * df_tierMap.iloc[estTier,2]\n",
     "        fireStone_prop = singleCusty_select.iloc[:,3] /  singleCusty_select.iloc[:,1]\n",
@@ -217,12 +209,30 @@
     "        fuzion_1up_tires_rebate = fuzion_1up_tires * df_tierMap.iloc[tierUP,3]\n",
     "     \n",
     "        total_est_dollars = bridgeStone_est_tires_rebate + fireStone_est_tires_rebate + fuzion_est_tires_rebate\n",
-    "        total_1up_dollars = bridgeStone_1up_tires_rebate + fireStone_1up_tires_rebate + fuzion_1up_tires_rebate\n",
-    "        total_1up_tires = bridgeStone_1up_tires + fireStone_1up_tires\n",
+    "        \n",
+    "        if estimatedTires <= 0:\n",
+    "            total_1up_tires = 0\n",
+    "        else:\n",
+    "            total_1up_tires = df_tierMap.iloc[1,4]\n",
+    "            \n",
+    "        if total_1up_tires <= 0:\n",
+    "            total_1up_dollars = df_tierMap.iloc[1,2] * df_tierMap.iloc[1,4]\n",
+    "        else:\n",
+    "            total_1up_dollars = bridgeStone_1up_tires_rebate + fireStone_1up_tires_rebate + fuzion_1up_tires_rebate\n",
+    "  \n",
+    "\n",
+    "        if total_1up_dollars < df_tierMap.iloc[1,2] * df_tierMap.iloc[1,4]:\n",
+    "            total_1up_dollars = df_tierMap.iloc[1,2] * df_tierMap.iloc[1,4]\n",
+    "        else:\n",
+    "            total_1up_dollars = total_1up_dollars\n",
+    "\n",
+    "      \n",
     "        MB_est_tires = bridgeStone_est_tires + fireStone_est_tires\n",
     "\n",
     "        current_MB_total = singleCusty_select.iloc[:,5]\n",
-    "        \n",
+    "   \n",
+    "\n",
+    "     \n",
     "        if estimatedTires > total_1up_tires:\n",
     "            bridgeStone_1up_tires = bridgeStone_est_tires\n",
     "            fireStone_1up_tires = fireStone_est_tires\n",
@@ -231,7 +241,7 @@
     "            \n",
     "            bridgeStone_1up_tires_rebate = bridgeStone_est_tires_rebate\n",
     "            fireStone_1up_tires_rebate = fireStone_est_tires_rebate\n",
-    "            fuzion_1up_tires_rebate = fuzion_est_tires_rebate\n",
+    "            fuzion_1up_tires_rebate = fuzion_est_tires_rebate \n",
     "            total_1up_dollars = total_est_dollars\n",
     "\n",
     "        range_dollars_ll = ((total_1up_tires * df_tierMap.iloc[tierUP,2]))#.values\n",
@@ -255,7 +265,7 @@
     "             'bridgeStone_est_rebate':0, 'fireStone_est_rebate':0, 'fuzion_est_rebate':0, 'current_total_est_rebate':0,\n",
     "             'Up_tier':1,\n",
     "             'bridgeStone_up_tires':0, 'fireStone_up_tires':0, 'fuzion_up_tires':0,\n",
-    "             'bridgeStone_up_rebate':0, 'fireStone_up_rebate':0, 'fuzion_up_rebate':0, 'total_up_rebate':0,\n",
+    "             'bridgeStone_up_rebate':0, 'fireStone_up_rebate':0, 'fuzion_up_rebate':0, 'total_up_rebate':df_tierMap.iloc[1,] * df_tierMap.iloc[1,4],\n",
     "             'range_lower':[rangbe_dollars_ll], 'range_upper':[range_dollars_ul],'period': quarter, 'grain': 'Quarter'})\n",
     "        calculatedData = calculatedData.append(tempData)\n",
     "###########################################################################################################################        \n",
@@ -263,17 +273,22 @@
     "\n",
     "df.loc[df['QTDsum'] < df_tierMap.iloc[1,4], 'current_tier'] = 0\n",
     "df.loc[df['QTDsum'] >= df_tierMap.iloc[1,4], 'current_tier'] = 1\n",
-    "finalData = pd.concat([calculatedData,df], axis=1)"
+    "    \n",
+    "finalData = pd.concat([calculatedData,df], axis=1)\n",
+    "\n",
+    "# print(calculatedData)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "finalData = finalData.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
-    "# finalData.columns"
+    "# finalData.head()"
    ]
   },
   {
@@ -291,6 +306,13 @@
     "                        + '.csv'\n",
     "finalData.to_csv(writeFilename_archive, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -309,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
